<resources>
    <string name="app_name">DnD Mapp</string>

    <string name="exception_message_retrieval_error">
        Something went wrong while retrieving the %1$s
    </string>

    <string name="home_fragment_label">Home Fragment</string>
    <string name="title_home">Home</string>
    <string name="btn_text_characters_overview">Characters Overview</string>
    <string name="btn_text_create_character">Create Character</string>
    <string name="btn_text_spells_dictionary">Spells Library</string>

    <string name="spells_library_fragment_label">Spells Library Fragment</string>
    <string name="title_spells_library">Spells Library</string>
    <string name="btn_description_open_spell_filters">open spell filters</string>

    <string name="label_text_spell_name" />
    <string name="label_text_spell_level">%1$s, %2$s</string>
    <string name="label_text_spell_school" />
    <string name="label_text_spell_components" />
    <string name="label_text_spell_duration" />
    <string name="label_text_spell_casting_time" />
    <string name="label_text_spell_range" />

    <string name="characters_overview_fragment_label">Characters Overview Fragment</string>
    <string name="title_characters_overview">Characters Overview</string>

    <string name="character_creator_fragment_label">Character Creator Fragment</string>
    <string name="title_character_creator">Character Creator</string>
    <string name="input_placeholder_spell_search">Find spell...</string>
    <string name="btn_text_submit_search">find</string>

    <string name="title_spell_filters">Spell Filters</string>
    <string name="checkbox_text_ritual">Ritual casting</string>
    <string name="checkbox_text_concentration">Requires concentration</string>
    <string name="title_spell_components">Spell Components</string>
    <string name="checkbox_text_components_vocal">Vocal</string>
    <string name="checkbox_text_components_somatic">Somatic</string>
    <string name="checkbox_text_components_material">Material</string>
    <string name="input_placeholder_spell_level">Levels (0..9)</string>
    <string name="btn_text_apply_filters">Apply Filters</string>

</resources>
